[metadata]
name = bing_images
version = 0.2.3
author = CatchZeng
author_email = catchzenghh@gmail.com
description = Python library to fetch image urls and download using multithreading from Bing.com.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catchzeng/bing_images
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3
install_requires = 
    requests>=2.24.0
    selenium>=3.141.0
